// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RunicKey component Matches snapshot: Elder Futhark 1`] = `
<section>
  <header>
    <h1>
      Elder Futhark
    </h1>
    <p>
      Translate runes to text
    </p>
  </header>
  <p
    className="result"
  />
  <div
    className="keyboard"
  >
    <button
      aria-label="Runic key ᚠ, meaning letter f"
      className="key"
      onClick={[Function]}
    >
      ᚠ
    </button>
    <button
      aria-label="Runic key ᚢ, meaning letter u"
      className="key"
      onClick={[Function]}
    >
      ᚢ
    </button>
    <button
      aria-label="Runic key ᚦ, meaning letter þ"
      className="key"
      onClick={[Function]}
    >
      ᚦ
    </button>
    <button
      aria-label="Runic key ᚨ, meaning letter a"
      className="key"
      onClick={[Function]}
    >
      ᚨ
    </button>
    <button
      aria-label="Runic key ᚱ, meaning letter r"
      className="key"
      onClick={[Function]}
    >
      ᚱ
    </button>
    <button
      aria-label="Runic key ᚲ, meaning letter k"
      className="key"
      onClick={[Function]}
    >
      ᚲ
    </button>
    <button
      aria-label="Runic key ᚷ, meaning letter g"
      className="key"
      onClick={[Function]}
    >
      ᚷ
    </button>
    <button
      aria-label="Runic key ᚹ, meaning letter w"
      className="key"
      onClick={[Function]}
    >
      ᚹ
    </button>
    <button
      aria-label="Runic key ᚺ, meaning letter h"
      className="key"
      onClick={[Function]}
    >
      ᚺ
    </button>
    <button
      aria-label="Runic key ᚻ, meaning letter h"
      className="key"
      onClick={[Function]}
    >
      ᚻ
    </button>
    <button
      aria-label="Runic key ᚾ, meaning letter n"
      className="key"
      onClick={[Function]}
    >
      ᚾ
    </button>
    <button
      aria-label="Runic key ᛁ, meaning letter i"
      className="key"
      onClick={[Function]}
    >
      ᛁ
    </button>
    <button
      aria-label="Runic key ᛃ, meaning letter j"
      className="key"
      onClick={[Function]}
    >
      ᛃ
    </button>
    <button
      aria-label="Runic key ᛇ, meaning letter ï"
      className="key"
      onClick={[Function]}
    >
      ᛇ
    </button>
    <button
      aria-label="Runic key ᛈ, meaning letter p"
      className="key"
      onClick={[Function]}
    >
      ᛈ
    </button>
    <button
      aria-label="Runic key ᛉ, meaning letter z"
      className="key"
      onClick={[Function]}
    >
      ᛉ
    </button>
    <button
      aria-label="Runic key ᛊ, meaning letter s"
      className="key"
      onClick={[Function]}
    >
      ᛊ
    </button>
    <button
      aria-label="Runic key ᛋ, meaning letter s"
      className="key"
      onClick={[Function]}
    >
      ᛋ
    </button>
    <button
      aria-label="Runic key ᛏ, meaning letter t"
      className="key"
      onClick={[Function]}
    >
      ᛏ
    </button>
    <button
      aria-label="Runic key ᛒ, meaning letter b"
      className="key"
      onClick={[Function]}
    >
      ᛒ
    </button>
    <button
      aria-label="Runic key ᛖ, meaning letter e"
      className="key"
      onClick={[Function]}
    >
      ᛖ
    </button>
    <button
      aria-label="Runic key ᛗ, meaning letter m"
      className="key"
      onClick={[Function]}
    >
      ᛗ
    </button>
    <button
      aria-label="Runic key ᛚ, meaning letter l"
      className="key"
      onClick={[Function]}
    >
      ᛚ
    </button>
    <button
      aria-label="Runic key ᛜ, meaning letter ŋ"
      className="key"
      onClick={[Function]}
    >
      ᛜ
    </button>
    <button
      aria-label="Runic key ᛝ, meaning letter ŋ"
      className="key"
      onClick={[Function]}
    >
      ᛝ
    </button>
    <button
      aria-label="Runic key ᛟ, meaning letter o"
      className="key"
      onClick={[Function]}
    >
      ᛟ
    </button>
    <button
      aria-label="Runic key ᛞ, meaning letter d"
      className="key"
      onClick={[Function]}
    >
      ᛞ
    </button>
    <button
      aria-label="Runic key :, meaning letter  "
      className="key"
      onClick={[Function]}
    >
      :
    </button>
  </div>
</section>
`;

exports[`RunicKey component Matches snapshot: Futhorc 1`] = `
<section>
  <header>
    <h1>
      Futhorc
    </h1>
    <p>
      Translate runes to text
    </p>
  </header>
  <p
    className="result"
  />
  <div
    className="keyboard"
  >
    <button
      aria-label="Runic key ᚠ, meaning letter f"
      className="key"
      onClick={[Function]}
    >
      ᚠ
    </button>
    <button
      aria-label="Runic key ᚢ, meaning letter u"
      className="key"
      onClick={[Function]}
    >
      ᚢ
    </button>
    <button
      aria-label="Runic key ᚦ, meaning letter þ"
      className="key"
      onClick={[Function]}
    >
      ᚦ
    </button>
    <button
      aria-label="Runic key ᚩ, meaning letter o"
      className="key"
      onClick={[Function]}
    >
      ᚩ
    </button>
    <button
      aria-label="Runic key ᚱ, meaning letter r"
      className="key"
      onClick={[Function]}
    >
      ᚱ
    </button>
    <button
      aria-label="Runic key ᚳ, meaning letter c"
      className="key"
      onClick={[Function]}
    >
      ᚳ
    </button>
    <button
      aria-label="Runic key ᚷ, meaning letter g"
      className="key"
      onClick={[Function]}
    >
      ᚷ
    </button>
    <button
      aria-label="Runic key ᚹ, meaning letter w"
      className="key"
      onClick={[Function]}
    >
      ᚹ
    </button>
    <button
      aria-label="Runic key ᚻ, meaning letter h"
      className="key"
      onClick={[Function]}
    >
      ᚻ
    </button>
    <button
      aria-label="Runic key ᚾ, meaning letter n"
      className="key"
      onClick={[Function]}
    >
      ᚾ
    </button>
    <button
      aria-label="Runic key ᛁ, meaning letter i"
      className="key"
      onClick={[Function]}
    >
      ᛁ
    </button>
    <button
      aria-label="Runic key ᛡ, meaning letter j"
      className="key"
      onClick={[Function]}
    >
      ᛡ
    </button>
    <button
      aria-label="Runic key ᛄ, meaning letter j"
      className="key"
      onClick={[Function]}
    >
      ᛄ
    </button>
    <button
      aria-label="Runic key ᛇ, meaning letter ï"
      className="key"
      onClick={[Function]}
    >
      ᛇ
    </button>
    <button
      aria-label="Runic key ᛈ, meaning letter p"
      className="key"
      onClick={[Function]}
    >
      ᛈ
    </button>
    <button
      aria-label="Runic key ᛉ, meaning letter x"
      className="key"
      onClick={[Function]}
    >
      ᛉ
    </button>
    <button
      aria-label="Runic key ᛋ, meaning letter s"
      className="key"
      onClick={[Function]}
    >
      ᛋ
    </button>
    <button
      aria-label="Runic key ᚴ, meaning letter s"
      className="key"
      onClick={[Function]}
    >
      ᚴ
    </button>
    <button
      aria-label="Runic key ᛏ, meaning letter t"
      className="key"
      onClick={[Function]}
    >
      ᛏ
    </button>
    <button
      aria-label="Runic key ᛒ, meaning letter b"
      className="key"
      onClick={[Function]}
    >
      ᛒ
    </button>
    <button
      aria-label="Runic key ᛖ, meaning letter e"
      className="key"
      onClick={[Function]}
    >
      ᛖ
    </button>
    <button
      aria-label="Runic key ᛗ, meaning letter m"
      className="key"
      onClick={[Function]}
    >
      ᛗ
    </button>
    <button
      aria-label="Runic key ᛚ, meaning letter l"
      className="key"
      onClick={[Function]}
    >
      ᛚ
    </button>
    <button
      aria-label="Runic key ᛝ, meaning letter ŋ"
      className="key"
      onClick={[Function]}
    >
      ᛝ
    </button>
    <button
      aria-label="Runic key ᛟ, meaning letter œ"
      className="key"
      onClick={[Function]}
    >
      ᛟ
    </button>
    <button
      aria-label="Runic key ᛞ, meaning letter d"
      className="key"
      onClick={[Function]}
    >
      ᛞ
    </button>
    <button
      aria-label="Runic key ᚪ, meaning letter a"
      className="key"
      onClick={[Function]}
    >
      ᚪ
    </button>
    <button
      aria-label="Runic key ᚫ, meaning letter æ"
      className="key"
      onClick={[Function]}
    >
      ᚫ
    </button>
    <button
      aria-label="Runic key ᚣ, meaning letter y"
      className="key"
      onClick={[Function]}
    >
      ᚣ
    </button>
    <button
      aria-label="Runic key ᛠ, meaning letter ea"
      className="key"
      onClick={[Function]}
    >
      ᛠ
    </button>
    <button
      aria-label="Runic key :, meaning letter  "
      className="key"
      onClick={[Function]}
    >
      :
    </button>
  </div>
</section>
`;

exports[`RunicKey component Matches snapshot: Futhork 1`] = `
<section>
  <header>
    <h1>
      Futhork
    </h1>
    <p>
      Translate runes to text
    </p>
  </header>
  <p
    className="result"
  />
  <div
    className="keyboard"
  >
    <button
      aria-label="Runic key ᚠ, meaning letter f"
      className="key"
      onClick={[Function]}
    >
      ᚠ
    </button>
    <button
      aria-label="Runic key ᚢ, meaning letter u"
      className="key"
      onClick={[Function]}
    >
      ᚢ
    </button>
    <button
      aria-label="Runic key ᚦ, meaning letter þ"
      className="key"
      onClick={[Function]}
    >
      ᚦ
    </button>
    <button
      aria-label="Runic key ᚮ, meaning letter o"
      className="key"
      onClick={[Function]}
    >
      ᚮ
    </button>
    <button
      aria-label="Runic key ᚱ, meaning letter r"
      className="key"
      onClick={[Function]}
    >
      ᚱ
    </button>
    <button
      aria-label="Runic key ᚴ, meaning letter k"
      className="key"
      onClick={[Function]}
    >
      ᚴ
    </button>
    <button
      aria-label="Runic key ᚼ, meaning letter h"
      className="key"
      onClick={[Function]}
    >
      ᚼ
    </button>
    <button
      aria-label="Runic key ᚿ, meaning letter n"
      className="key"
      onClick={[Function]}
    >
      ᚿ
    </button>
    <button
      aria-label="Runic key ᛁ, meaning letter i"
      className="key"
      onClick={[Function]}
    >
      ᛁ
    </button>
    <button
      aria-label="Runic key ᛆ, meaning letter a"
      className="key"
      onClick={[Function]}
    >
      ᛆ
    </button>
    <button
      aria-label="Runic key ᛌ, meaning letter s"
      className="key"
      onClick={[Function]}
    >
      ᛌ
    </button>
    <button
      aria-label="Runic key ᛋ, meaning letter s"
      className="key"
      onClick={[Function]}
    >
      ᛋ
    </button>
    <button
      aria-label="Runic key ᛐ, meaning letter t"
      className="key"
      onClick={[Function]}
    >
      ᛐ
    </button>
    <button
      aria-label="Runic key ᛏ, meaning letter t"
      className="key"
      onClick={[Function]}
    >
      ᛏ
    </button>
    <button
      aria-label="Runic key ᛒ, meaning letter b"
      className="key"
      onClick={[Function]}
    >
      ᛒ
    </button>
    <button
      aria-label="Runic key ᛘ, meaning letter m"
      className="key"
      onClick={[Function]}
    >
      ᛘ
    </button>
    <button
      aria-label="Runic key ᛚ, meaning letter l"
      className="key"
      onClick={[Function]}
    >
      ᛚ
    </button>
    <button
      aria-label="Runic key ᛦ, meaning letter y"
      className="key"
      onClick={[Function]}
    >
      ᛦ
    </button>
    <button
      aria-label="Runic key :, meaning letter  "
      className="key"
      onClick={[Function]}
    >
      :
    </button>
    <button
      aria-label="Runic key ᚵ, meaning letter g"
      className="key"
      onClick={[Function]}
    >
      ᚵ
    </button>
    <button
      aria-label="Runic key ᚽ, meaning letter e"
      className="key"
      onClick={[Function]}
    >
      ᚽ
    </button>
    <button
      aria-label="Runic key ᚯ, meaning letter ø"
      className="key"
      onClick={[Function]}
    >
      ᚯ
    </button>
    <button
      aria-label="Runic key ᛅ, meaning letter æ"
      className="key"
      onClick={[Function]}
    >
      ᛅ
    </button>
    <button
      aria-label="Runic key ᚰ, meaning letter ǫ"
      className="key"
      onClick={[Function]}
    >
      ᚰ
    </button>
    <button
      aria-label="Runic key ᛕ, meaning letter ᴘ"
      className="key"
      onClick={[Function]}
    >
      ᛕ
    </button>
  </div>
</section>
`;

exports[`RunicKey component Matches snapshot: Younger Futhark 1`] = `
<section>
  <header>
    <h1>
      Younger Futhark
    </h1>
    <p>
      Translate runes to text
    </p>
  </header>
  <p
    className="result"
  />
  <div
    className="keyboard"
  >
    <button
      aria-label="Runic key ᚠ, meaning letter f"
      className="key"
      onClick={[Function]}
    >
      ᚠ
    </button>
    <button
      aria-label="Runic key ᚢ, meaning letter u"
      className="key"
      onClick={[Function]}
    >
      ᚢ
    </button>
    <button
      aria-label="Runic key ᚦ, meaning letter þ"
      className="key"
      onClick={[Function]}
    >
      ᚦ
    </button>
    <button
      aria-label="Runic key ᚬ, meaning letter o"
      className="key"
      onClick={[Function]}
    >
      ᚬ
    </button>
    <button
      aria-label="Runic key ᚱ, meaning letter r"
      className="key"
      onClick={[Function]}
    >
      ᚱ
    </button>
    <button
      aria-label="Runic key ᚴ, meaning letter k"
      className="key"
      onClick={[Function]}
    >
      ᚴ
    </button>
    <button
      aria-label="Runic key ᚼ, meaning letter h"
      className="key"
      onClick={[Function]}
    >
      ᚼ
    </button>
    <button
      aria-label="Runic key ᚽ, meaning letter h"
      className="key"
      onClick={[Function]}
    >
      ᚽ
    </button>
    <button
      aria-label="Runic key ᚾ, meaning letter n"
      className="key"
      onClick={[Function]}
    >
      ᚾ
    </button>
    <button
      aria-label="Runic key ᚿ, meaning letter n"
      className="key"
      onClick={[Function]}
    >
      ᚿ
    </button>
    <button
      aria-label="Runic key ᛁ, meaning letter i"
      className="key"
      onClick={[Function]}
    >
      ᛁ
    </button>
    <button
      aria-label="Runic key ᛅ, meaning letter a"
      className="key"
      onClick={[Function]}
    >
      ᛅ
    </button>
    <button
      aria-label="Runic key ᛆ, meaning letter a"
      className="key"
      onClick={[Function]}
    >
      ᛆ
    </button>
    <button
      aria-label="Runic key ᛋ, meaning letter s"
      className="key"
      onClick={[Function]}
    >
      ᛋ
    </button>
    <button
      aria-label="Runic key ᛌ, meaning letter s"
      className="key"
      onClick={[Function]}
    >
      ᛌ
    </button>
    <button
      aria-label="Runic key ᛏ, meaning letter t"
      className="key"
      onClick={[Function]}
    >
      ᛏ
    </button>
    <button
      aria-label="Runic key ᛐ, meaning letter t"
      className="key"
      onClick={[Function]}
    >
      ᛐ
    </button>
    <button
      aria-label="Runic key ᛒ, meaning letter b"
      className="key"
      onClick={[Function]}
    >
      ᛒ
    </button>
    <button
      aria-label="Runic key ᛘ, meaning letter m"
      className="key"
      onClick={[Function]}
    >
      ᛘ
    </button>
    <button
      aria-label="Runic key ᛚ, meaning letter l"
      className="key"
      onClick={[Function]}
    >
      ᛚ
    </button>
    <button
      aria-label="Runic key ᛦ, meaning letter R"
      className="key"
      onClick={[Function]}
    >
      ᛦ
    </button>
    <button
      aria-label="Runic key :, meaning letter  "
      className="key"
      onClick={[Function]}
    >
      :
    </button>
  </div>
</section>
`;
